--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="New_base">Enter New Base</string>
     <string name="Enter">Enter</string>
     <string name="ans">Answer</string>
+    <string name="header">HEADER!!!</string>
 </resources>
